# SRag

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  demo.py  docker-compose.yml  index_from_web.py  py.typed  pyproject.toml  semantic_demo.py  test.py
.github/workflows/.github/workflows/: publish.yml
srag/: __init__.py  adaptive_concurrency.py  chunker.py  cli.py  collector.py  config.py  context_builder.py  exceptions.py  indexer.py  ingestor.py  lexicon.py  orchestrator.py  quality_evaluator.py  query_intelligence.py  recency.py  reputation.py  result.py  scraper.py  search_providers.py  server.py  topic_classifier.py  tracer.py
