[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srag"
version = "0.9.0"
description = "Smart RAG — local Tavily-style search + scrape + vector index for LLM/RAG workflows. Ingest web, PDF, DOCX, CSV, JSON, SQLite and PostgreSQL."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.8",
    "duckduckgo-search>=6.0",
    "lancedb>=0.6",
    "sentence-transformers>=3.0",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "playwright>=1.40",
]

[project.optional-dependencies]
docs = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
]
databases = [
    "psycopg2-binary>=2.9",
]
all = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "psycopg2-binary>=2.9",
]

[project.scripts]
srag = "srag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["srag*"]