[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srag"
version = "1.0.0"
description = "Smart RAG — the retrieval layer for local AI agents. Replaces Tavily + Firecrawl + Perplexity with a single open-source package."
readme = "README.md"
"License :: OSI Approved :: MIT License"
requires-python = ">=3.10"
authors = [
    { name = "Gourav Mandi", email = "mg1139110@gmail.com" }
]
keywords = [
    "rag", "retrieval", "ai", "llm", "agents",
    "search", "scraping", "vector", "lancedb",
    "semantic-search", "chunking",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.8",
    "duckduckgo-search>=6.0",
    "lancedb>=0.6",
    "sentence-transformers>=3.0",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "playwright>=1.40",
]

[project.optional-dependencies]
docs = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
]
databases = [
    "psycopg2-binary>=2.9",
]
all = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage   = "https://github.com/square-box-hash/SRag"
Repository = "https://github.com/square-box-hash/SRag"
Issues     = "https://github.com/square-box-hash/SRag/issues"

[project.scripts]
srag = "srag.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["srag*"]